# lawyer-app

./: .pre-commit-config.yaml  applayout.py  main.py  pyproject.toml  settings.py  sidebar.py
src/: app.py  appbar.py  applayout.py  sidebar.py
src/gui/: main_window.py  navigation_bar.py
src/gui/add_data/: laywer_widget.py  tab_bar_widget.py
src/gui/show_table_view/: table_view.py
src/storage/: storage.py
